force-app/main/default/objects/Contributor__c/Contributor__c.object-meta.xml
<CustomObject>
    <description>[Technology Transfer Starter] Contributors to a single transaction. Typically used where a transaction has multiple parties contributing to a fee.</description>
    <label>Contributor</label>
    <nameField>
        <displayFormat>CONT{00000}</displayFormat>
        <label>Contributor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contributors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>