force-app/main/default/objects/Contributor__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Related organisation to this contribution.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contributors</relationshipLabel>
    <relationshipName>Contributors</relationshipName>
    <type>Lookup</type>
</CustomField>