force-app/main/default/objects/Contributor__c/fields/IP_Cont_Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>IP_Cont_Payment_Reference__c</fullName>
    <externalId>true</externalId>
    <label>Payment Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>