force-app/main/default/objects/Contributor__c/fields/IP_Contact__c.field-meta.xml
<CustomField>
    <fullName>IP_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Primary contact related to this contribution from the Contributor</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contributions</relationshipLabel>
    <relationshipName>Contributors</relationshipName>
    <type>Lookup</type>
</CustomField>