force-app/main/default/objects/Contributor__c/fields/IP_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>IP_Date_Time__c</fullName>
    <inlineHelpText>The date/time of the contribution from the Contributor.</inlineHelpText>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>