force-app/main/default/objects/Contributor__c/fields/IP_Related_Transaction__c.field-meta.xml
<CustomField>
    <fullName>IP_Related_Transaction__c</fullName>
    <inlineHelpText>Transaction related to this Contributor.</inlineHelpText>
    <label>Transaction</label>
    <referenceTo>IP_Transaction__c</referenceTo>
    <relationshipLabel>Contributors</relationshipLabel>
    <relationshipName>Contributions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>